# foundry

./: .gitignore  README.md  build_menu.py  main_menu.py  menu.py  pyproject.toml  requirements.txt  setup.py
changelogs/: v1.0.3.yaml  v1.0.4.yaml
docker/: menu.py
foundry/: __init__.py  __main__.py  main_menu.py  version.py
foundry/colours/: __init__.py  colours.py
foundry/config/EXAMPLE/: README.md
foundry/docker/: menu.py  networking.py  run.py
foundry/docker/networking/: networking.py
foundry/files/: __init__.py  files.py
foundry/games/: __init__.py  lottery.py  menu.py
foundry/games/lottery/: lottery.py
foundry/git/: git_menu.py
foundry/git/wiki/: breadcrumbs.py
foundry/logger/: README.md  __init__.py  logger.py
foundry/menu/: __init__.py  keyhandler.py  main_menu.py  menu.py
foundry/paths/: paths.py
foundry/synth_data/: menu.py
foundry/users/: README.md  users.py
foundry/utils/: envprofile.py  files.py  keyhandler.py  logger.py  paths.py
games/: menu.py
users/: users.py  users.yml
utils/: envprofile.py  keyhandler.py  logger.py  pathloader.py
